--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>miniRUEDI Symposium</title>
+<!-- Minified version -->
+<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+<!-- Un-Minified version -->
+<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
+</head>
+<body>
+<h1>miniRUEDI Home</h1>
+<p>This is the home for miniruedi@github</p>
+
+<h3>miniRUEDI Symposia</h3>
+<ul>
+  <li><a href=https://miniruedi.github.io/symposium>miniRUEDI Symposium 2025: preliminiary information</a></li>
+  <li><a href=https://github.com/miniruedi/symposium/tree/main/2023>miniRUEDI Symposium 2023</a></li>
+  <li><a href=https://github.com/miniruedi/symposium/tree/main/2019>miniRUEDI Symposium 2019</a></li>
+</ul>
+</body>
