--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>miniRUEDI Symposium</title>
+<title>miniRUEDI Home</title>
 <!-- Minified version -->
 <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 <!-- Un-Minified version -->
 <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
 </head>
 <body>
-<h1>miniRUEDI Home</h1>
-<p>This is the home for miniruedi@github</p>
+<h1>Home for all things miniRUEDIe</h1>
 
 <h3>miniRUEDI Symposia</h3>
 <ul>
@@ -19,4 +18,15 @@
   <li><a href=https://github.com/miniruedi/symposium/tree/main/2023>miniRUEDI Symposium 2023</a></li>
   <li><a href=https://github.com/miniruedi/symposium/tree/main/2019>miniRUEDI Symposium 2019</a></li>
 </ul>
+<h3>Resources</h3>
+<ul>
+  <li><a href=https://www.eawag.ch/en/about-us/working/researchenvironment/tracer-lab>Eawag Tracer Lab</a></li>
+  <li><a href=https://gasometrix.com/>Gasometrix GmbH</a></li>
+  <li>Technical and scientific background paper: <a href=https://doi.org/10.1021/acs.est.6b03669>A Portable and Autonomous Mass Spectrometric System for On-Site Environmental Gas Analysis</a>
+  <li>Technical and scientific background paper: <a href=https://doi.org/10.1016/j.mex.2020.101038>Deconvolution and compensation of mass spectrometric overlap interferences with the miniRUEDI portable mass spectrometer</a>
+  <li><a href=https://scholar.google.com/scholar?q=miniRUEDI>List of miniRUEDI-related scientific publications</a>
+</ul>
+
+<p>Matthias Brennwald (<a href=https://www.eawag.ch/en/about-us/working/researchenvironment/tracer-lab>Eawag</a> and <a href=https://gasometrix.com/>Gasometrix</a>)</p>
+
 </body>
