--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
 </head>
 <body>
-<h1>Home for all things miniRUEDIe</h1>
+<h1>miniRUEDI Things</h1>
 
 <h3>miniRUEDI Symposia</h3>
 <ul>
